--- a/frontend/src/styles/components/_signinform.scss
+++ b/frontend/src/styles/components/_signinform.scss
@@ -1,38 +1,41 @@
 .signinform {
-width: 300px;
-height: 300px;
-
- background-color: $color-1;
- color: #ffff;
- display: flex;
- justify-content: center;
- align-items: center;
- column-rule: black;
- font-family: "Roboto";
- font-weight: 300;
- padding: 5px 15px;
- border-radius: 15%;
-
- form {
+  padding: 15px;
+  background-color: $color-1;
+  color: #ffff;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  label {
-   font-size: 1.5rem;
-   line-height: 1rem;
+  column-rule: black;
+  font-family: "Roboto";
+  font-weight: 300;
+  border-radius: 15%;
+
+  form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    label {
+      font-size: 1.5rem;
+      line-height: 1rem;
+    }
+    input {
+      height: 40px;
+    }
   }
-  input {
-   height: 40px;
+  input[type="text"],
+  input[type="password"] {
+    font-size: 20px;
+    font-family: "Roboto";
+    padding-left: 10px;
   }
- }
- input[type="text"], input[type="password"] {
- font-size: 20px;
-  font-family: 'Roboto';
-  padding-left: 10px;
- 
-  &:hover {
- 
+
+  input[type="submit"] {
+    width: 150px;
+    margin-bottom: 15px;
   }
- }
+
+  button {
+    width: 150px;
+  }
 }
