--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,4 +1,4 @@
 @import './settings';
-@import './pages/signin.scss';
-@import './components/_navbar.scss';
-@import './components/_signinform.scss'
+@import './components/navbar';
+@import './components/form';
+@import './components/switchbutton';
