--- a/frontend/src/styles/_settings.scss
+++ b/frontend/src/styles/_settings.scss
@@ -1,13 +1,7 @@
+$font-1: "Roboto", sans-serif;
 
-
-$font-1: "font-1", sans-serif;
-$font-2: "font-2", serif;
-$font-3: "font-3", serif;
-
-$color-1: #02586F;
-$color-2: #ffff;
-$color-3: rgb(0, 22, 44);
-$color-4: #fdeeee;
+$color-1: #091F43;
+$color-2: #D1515A;
 $black: rgb(40, 40, 40);
 $white: rgb(253, 253, 253);
 $shadow: rgb(219, 218, 218);
@@ -27,58 +21,11 @@ $shadow: rgb(219, 218, 218);
 }
 a,
 a:visited {
- color: $color-3;
+ color: $color-2;
 }
-input,
-textarea {
- resize: none;
- border-radius: 20px;
- width: 270px;
- font-family: $font-1;
- background: $white;
-}
-textarea {
- &:focus {
-   box-shadow: 0 0 4px rgba(0, 22, 44, 0.1);
- }
-}
-button,
-input[type="submit"] {
- background: $color-2;
- color: $color-1;
- font-family: $font-3;
- cursor: pointer;
- transition: 0.2s;
- margin: 0;
- padding: 10px 20px;
- cursor: pointer;
- font-size: 1.1rem;
- border-radius: 20px 6px 20px 20px;
- width: 50%;
- font-family: 'Roboto';
 
- &:hover {
-   background: $color-1;
-   color: $color-2;
- }
-}
-input[type="checkbox"] {
- box-shadow: none;
- width: 20px;
- margin: 10px 0;
-}
-i {
- transition: 0.15s;
-
- &:hover {
-   transform: scale(1.1);
- }
-}
 body {
- font-family: $font-2;
- line-height: 1.4rem;
- background: $white;
- color: $color-3;
+ font-family: 'Roboto', sans-serif
 }
 .error {
  color: red;
@@ -88,5 +35,3 @@ body {
  color: green;
  font-weight: bold;
 }
-
-
