--- a/frontend/src/styles/components/_navbar.scss
+++ b/frontend/src/styles/components/_navbar.scss
@@ -1,14 +1,14 @@
+@import '../settings';
+
 .navbar {
- position: fixed;
  width: 100%;
- height: 65px;
+ height: 8vh;
+ background-color: $color-1;
  display: flex;
  justify-content: center;
  align-items: center;
- background-color: $color-1;
 
  img {
-  height: 300px;
+  height: 250px;
  }
 }
-
