--- a/frontend/src/styles/components/_switchbutton.scss
+++ b/frontend/src/styles/components/_switchbutton.scss
@@ -1,23 +1,18 @@
 .containerswitchbutton {
-
 background-color: yellow;
 display: flex;
 justify-content: center;
 align-content: center;
 }
 
-
-
-
 .switchbutton {
  background-color: $color-1;
  color: #ffff;
- font-size: 20px;
+ font-size: 16px;
  border-radius: 15px;
- padding: 8px 8px 30px 8px;
+ padding: 6px;
  display: flex;
  justify-content: center;
  align-content: center;
- height: 30px;
  margin-top: 50px;
 }
