--- a/frontend/src/styles/components/form/_form.scss
+++ b/frontend/src/styles/components/form/_form.scss
@@ -1,7 +1,20 @@
+.containerform {
+ display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
+}
+
 .form {
- position: absolute;
- top: calc(50% - 100px);
- left: calc(50% - 133px);
+ 
+
+ img {
+  display: flex;
+  width: 150px;
+  height: auto;
+  margin-bottom: 5px;
+ }
+
  
 
  form {
@@ -11,16 +24,16 @@
   flex-direction: column;
   background-color: $color-1;
   color: white;
-  padding: 20px 20px 10px 20px;
+  padding: 10px 20px 10px 20px;
   border-radius: 20px;
   font-size: 16px;
+  width: 267px;
 
   label {
-   margin-bottom: 8px;
+   margin-bottom: 5px;
   }
 
   input {
-   margin-bottom: 1rem;
    border-radius: 20px;
    font-size: 16px;
    padding: 5px;
@@ -44,15 +57,8 @@
 
 }
 
-.signup {
- position: absolute;
- top: calc(50% - 200px);
-}
 
 .terms {
- display: flex;
-justify-content: space-between;
-align-items: center;
 font-size: 14px;
 }
 
