--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import './settings';
-@import './components/navbar';
-@import './components/form';
-@import './components/switchbutton';
+@import './components/post/navbar';
+@import './components/post/container';
+@import './components/form/form';
+@import './components/form/switchbutton';
