Post brouillon et gestion erreur email

--- a/frontend/src/styles/_settings.scss
+++ b/frontend/src/styles/_settings.scss
@@ -2,6 +2,7 @@ $font-1: "Roboto", sans-serif;
 
 $color-1: #091F43;
 $color-2: #D1515A;
+$grey : grey;
 $black: rgb(40, 40, 40);
 $white: rgb(253, 253, 253);
 $shadow: rgb(219, 218, 218);
