Gestion erreur plus bienvenu

--- a/frontend/src/styles/components/form/_form.scss
+++ b/frontend/src/styles/components/form/_form.scss
@@ -1,68 +1,70 @@
 .containerform {
- display: flex;
-justify-content: center;
-align-items: center;
-height: 100vh;
-}
-
-.form {
- 
-display: flex;
-justify-content: center;
-align-items: center;
- img {
-  display: flex;
-  width: 150px;
-  height: auto;
-  margin-bottom: 5px;
- }
-
- 
-
- form {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  background-color: $color-1;
-  color: white;
-  padding: 10px 20px 10px 20px;
-  border-radius: 20px;
-  font-size: 16px;
-  width: 267px;
-
-  label {
-   margin-bottom: 5px;
-  }
-
-  input {
-   border-radius: 20px;
-   font-size: 16px;
-   padding: 5px;
-   background-color: #ffff;
-  }
-
-  input[type="button"], input[type="submit"] {
-   padding: 6px;
-   transition: 0.2s;
-   cursor: pointer;
-
-   &:hover {
-   background-color: $color-1;
-   color: #ffff;
-   }
-  }
- }
- p {
-  margin-bottom: 8px;
- }
-
+  height: 100vh;
 }
 
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  img {
+    display: flex;
+    width: 150px;
+    height: auto;
+    margin-bottom: 5px;
+  }
+
+  form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: $color-1;
+    color: white;
+    padding: 10px 20px 10px 20px;
+    border-radius: 20px;
+    font-size: 16px;
+    width: 300px;
+
+    label {
+      margin-bottom: 5px;
+    }
+
+    input {
+      border-radius: 20px;
+      font-size: 16px;
+      padding: 5px;
+      background-color: #ffff;
+      width: 90%;
+    }
+
+    input[type="button"],
+    input[type="submit"] {
+      padding: 6px;
+      transition: 0.2s;
+      cursor: pointer;
+
+      &:hover {
+        background-color: $color-1;
+        color: #ffff;
+      }
+    }
+  }
+  p {
+    margin-bottom: 8px;
+  }
+}
 
 .terms {
-font-size: 14px;
+  display: flex;
+  font-size: 14px;
+  #terms {
+    width: fit-content;
+  }
 }
 
-
-
+.welcome {
+text-align: center;
+}
