--- a/frontend/src/styles/_settings.scss
+++ b/frontend/src/styles/_settings.scss
@@ -7,6 +7,8 @@ $black: rgb(40, 40, 40);
 $white: rgb(253, 253, 253);
 $shadow: rgb(219, 218, 218);
 
+$smartphone:"only screen and (max-width:700px)";
+
 * {
  margin: 0;
  padding: 0;
