--- a/frontend/src/styles/components/form/_form.scss
+++ b/frontend/src/styles/components/form/_form.scss
@@ -3,6 +3,11 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+
+  @media #{$smartphone} {
+    width: auto;
+    display: block;
+  }
 }
 
 .form {
@@ -27,6 +32,12 @@
     border-radius: 20px;
     font-size: 16px;
     width: 300px;
+
+    @media #{$smartphone} {
+      width: 100vw;
+      height: 90vh;
+      border-radius: 0px;
+    }
 
     label {
       margin-bottom: 5px;
@@ -67,4 +78,18 @@
 
 .welcome {
 text-align: center;
+}
+
+.password {
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
+  font-size: 13px;
+  text-align: center;
+
+}
+
+.textpassword {
+  color: $white;
+  text-align: center;
 }
