--- a/frontend/src/styles/components/post/_container.scss
+++ b/frontend/src/styles/components/post/_container.scss
@@ -12,7 +12,11 @@
   align-items: center;
   flex-direction: column;
   width: 70%;
-  border-radius: 15px
+  border-radius: 15px;
+  @media #{$smartphone} {
+    width: 100%;
+    border-radius: 0px;
+  }
 }
 .createpost {
   margin: 10px;
