--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,5 +1,8 @@
 @import './settings';
 @import './components/post/navbar';
 @import './components/post/container';
+@import './components/post/comment';
 @import './components/form/form';
 @import './components/form/switchbutton';
+@import './components/profil/profil';
+
