--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,8 +1,8 @@
-@import './settings';
+@import './main';
 @import './components/post/navbar';
 @import './components/post/container';
 @import './components/post/comment';
 @import './components/form/form';
 @import './components/form/switchbutton';
-@import './components/profil/profil';
+@import './components/setting/setting';
 
