--- a/frontend/src/styles/components/post/_container.scss
+++ b/frontend/src/styles/components/post/_container.scss
@@ -79,13 +79,21 @@
 
 .postcontent {
  padding: 4px;
+
 }
 
 .avatar {
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   border: 1px solid $grey;
+  overflow: hidden;
+
+  img {
+    width: 100%;
+  height: 100%;
+  object-fit: cover;
+  }
 }
 
 .numberlikecomment {
@@ -118,4 +126,21 @@
     color: $grey;
   }
 }
+
+.postimg {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 8px;
+  margin-top: 8px;
+  img {
+    max-width: 100%;
+    max-height: 500px;
+  }
+}
+
+input[type="file"]{
+display: none;
+}
+
+
 
