style form et home

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,8 +1,8 @@
 @import './main';
-@import './components/post/navbar';
-@import './components/post/container';
-@import './components/post/comment';
-@import './components/form/form';
-@import './components/form/switchbutton';
+@import './components/navbar';
+@import './components/home/post';
+@import './components/home/comment';
+@import './components/log/form';
+@import './components/log/switchbutton';
 @import './components/setting/setting';
 
