--- a/frontend/src/styles/_main.scss
+++ b/frontend/src/styles/_main.scss
@@ -2,7 +2,9 @@ $font-1: "Roboto", sans-serif;
 
 $color-1: #091F43;
 $color-2: #D1515A;
-$grey : grey;
+
+$grey: grey;
+$lightgrey : #F0F2F5;
 $black: rgb(40, 40, 40);
 $white: rgb(253, 253, 253);
 $shadow: rgb(219, 218, 218);
@@ -17,9 +19,10 @@ $smartphone:"only screen and (max-width:700px)";
  outline: none;
  border: none;
  text-decoration: none;
+ word-break: break-word;
 
  &::selection {
-   background: $color-1;
+   background: $color-2;
  }
 }
 a,
@@ -28,7 +31,7 @@ a:visited {
 }
 
 body {
- font-family: 'Roboto', sans-serif
+ font-family: 'Roboto', sans-serif;
 }
 .error {
 display: flex;
@@ -51,3 +54,8 @@ textarea {
 .white {
   color: $white;
 }
+
+
+input[type="file"]{
+  display: none;
+  }
