Style and comment

--- a/frontend/src/styles/components/_navbar.scss
+++ b/frontend/src/styles/components/_navbar.scss
@@ -8,10 +8,12 @@
 
  img {
   width: 200px;
+  cursor: pointer;
  }
 }
 
 .icon__navbar {
  color: $white;
- margin: 8px;
+ margin: 14px;
+ cursor: pointer;
 }
