--- a/frontend/src/styles/components/home/_post.scss
+++ b/frontend/src/styles/components/home/_post.scss
@@ -18,6 +18,11 @@
     border-radius: 0px;
   }
   
+
+  .image__name {
+    color: $white;
+    margin: 8px;
+  }
 }
 .createpost {
   margin: 30px 10px 10px 10px;
