--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -5,4 +5,5 @@
 @import './components/log/form';
 @import './components/log/switchbutton';
 @import './components/setting/setting';
+@import './components/admin/admin';
 
