--- a/frontend/src/styles/components/_navbar.scss
+++ b/frontend/src/styles/components/_navbar.scss
@@ -1,19 +1,36 @@
 .navbar {
- width: 100%;
- height: 50px;
- background-color: $color-1;
- display: flex;
- justify-content: space-between;
- align-items: center;
+  width: 100%;
+  height: 50px;
+  background-color: $color-1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
- img {
-  width: 200px;
-  cursor: pointer;
+  img {
+    width: 160px;
+    position: absolute;
+    left: calc(50% - 80px);
+    cursor: pointer;
+  }
+
+  .left__icon {
+   display: flex;
+   flex-wrap: wrap;
  }
 }
 
 .icon__navbar {
- color: $white;
- margin: 14px;
- cursor: pointer;
+  color: $white;
+  cursor: pointer;
+
+  &:nth-child(1) {
+    margin-left: 12px;
+  }
+  &:nth-child(2) {
+    margin-left: 12px;
+  }
+
+  &:nth-child(3) {
+    margin-right: 12px;
+  }
 }
